--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-torch>=2.0.0
-torchvision>=0.15.0
-numpy>=1.21.0
+# Core ML dependencies
+torch>=2.5.0
+torchvision>=0.20.0
+numpy>=2.1.0
+
+# Image processing
+Pillow>=9.0.0
+
+# Visualization and utilities
 matplotlib>=3.5.0
