--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,7 @@ pytest>=7.0.0
 # Metrics and advanced visualization
 scikit-learn>=1.0.0
 seaborn>=0.11.0
+
+pandas>=1.5.0
+timm>=0.9.0
+lightning>=2.0.0
