--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,9 @@ pandas>=1.5.0
 scikit-learn>=1.0.0
 timm>=0.9.0
 
+# Progress tracking and utilities
+tqdm>=4.64.0
+
 # Testing and development
 pytest>=7.0.0
 pytest-cov>=4.0.0
