--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Sync main (fast-forward only)
         run: |
           git checkout main
-          git merge --ff-only upstream/main
+          git merge --no-ff upstream/main -m "Merge upstream/main"
           git push origin main
 
       # 2) Mirror ALL OTHER branches (force), excluding main
